# Odyssey-

data/: odyssey.db
dspy_boss/: README.md  pyproject.toml
dspy_boss/dspy_boss/: cli.py
dspy_boss/dspy_boss/config/: loaders.py
dspy_boss/dspy_boss/core/: agents.py  boss.py  models.py  state_machine.py  task_manager.py
dspy_boss/sample_configs/: dsp_servers.json  humans.yaml  mcp_servers.json  react_prompt.yaml
dspygen/: gpt5_examples.py  openrouter_dspy.py  pyproject.toml  simple_dspygen.py  simple_gpt5_demo.py  test_basic_dspy.py  test_ollama_dspy.py
dyad-apps/sincere-kookaburra-roll/: package.json  pnpm-lock.yaml  tailwind.config.ts
dyad-apps/sincere-kookaburra-roll/src/components/: TradingBotGraphic.tsx
dyad-apps/sincere-kookaburra-roll/src/components/ui/: SafeLavaLamp.tsx  fluid-blob.tsx  splite.tsx
dyad-apps/sincere-kookaburra-roll/src/hooks/: use-toast.ts
dyad-apps/sincere-kookaburra-roll/src/pages/: Index.tsx
hume-dspy-integration/: advanced_chat_widget.html  deployment_readme.md  env_file.sh  main_app.py  railway_config.json  requirements_file.txt
test_project/: .env  README.md
test_project/modules/: text_summarizer.py
